Finish verify implementation ToDo => Unit test

--- a/config/env/develop.env
+++ b/config/env/develop.env
@@ -1,2 +1,3 @@
 TWILIO_ACCOUNT_SID=ACa4234bf9038ae0707ef0ad68b2fa6fe3
 TWILIO_ACCOUNT_TOKEN=dd420bd1cb83d6f588c8f49a2fbbafd0
+TWILIO_VERIFY_SID=VA6b36c1961e6a5af9d29ead2d87a22b77
