--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authentication-mngr",
+  "name": "tasky-manager",
   "version": "1.0.0",
   "description": "",
   "author": "juansep17@github.com",
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "dotenv": "^16.0.3",
+    "mysql2": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "twilio": "^3.84.1",
