--- a/config/env/develop.env
+++ b/config/env/develop.env
@@ -5,5 +5,5 @@ TWILIO_VERIFY_SID=VA6b36c1961e6a5af9d29ead2d87a22b77
 # DB
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASS=Colombia1*
+DB_PASS=
 DB_NAME=tasky_db
