ajustes twilio y sendgrid

--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@sendgrid/mail": "^8.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.0.3",
     "firebase-admin": "^12.6.0",
     "mysql2": "^3.1.2",
+    "node-fetch": "^2.7.0",
+    "pdf-lib": "^1.17.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "twilio": "^3.84.1"
