--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ on:
 
 jobs:
   deploy:
+    environment: prod
     # Add 'id-token' with the intended permissions for workload identity federation
     permissions:
       contents: 'read'
