add build and push to docker step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,12 +52,12 @@ on:
     branches:
       - main
 
-# env:
-#   GCP_PROJECT_ID: YOUR_GCP_PROJECT_ID # TODO: update Google Cloud project id
-#   GAR_LOCATION: YOUR_GAR_LOCATION # TODO: update Artifact Registry location
+env:
+  GCP_PROJECT_ID: tasky-operation
+  GAR_LOCATION: gcr.io # TODO: update Artifact Registry location
 #   REPOSITORY: YOUR_REPOSITORY_NAME # TODO: update Artifact Registry repository name
 #   SERVICE: YOUR_SERVICE_NAME # TODO: update Cloud Run service name
-#   REGION: YOUR_SERVICE_REGION # TODO: update Cloud Run service region
+  REGION: us-east1
 
 jobs:
   deploy:
@@ -77,9 +77,8 @@ jobs:
         uses: 'google-github-actions/auth@v2'
         with:
           token_format: 'access_token'
-          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
-      # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
+          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
+          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
       # Authenticate Docker to Google Cloud Artifact Registry
       # - name: Docker Auth
@@ -98,10 +97,10 @@ jobs:
       #   username: _json_key
       #   password: ${{ secrets.GCP_CREDENTIALS }}
 
-      # - name: Build and Push Container
-      #   run: |-
-      #     docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/tasky-manager:${{ github.sha }}" ./
-      #     docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/tasky-manager:${{ github.sha }}"
+      - name: Build and Push Container
+        run: |-
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.REPOSITORY }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.REPOSITORY }}:${{ github.sha }}"
 
       # END - Docker auth and build
 
@@ -109,10 +108,10 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v2
         with:
-          service: 'tasky-manager'
-          region: 'us-east1'
+          service: ${{ env.REPOSITORY }}
+          region: ${{ env.GAR_LOCATION }}
           # NOTE: If using a pre-built image, update the image name here
-          # image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/tasky-manager:${{ github.sha }}
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.REPOSITORY }}:${{ github.sha }}
           # NOTE: You can also set env variables here:
           #  env_vars: |
           #  NODE_ENV=production
