--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,14 +81,13 @@ jobs:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-      # Authenticate Docker to Google Cloud Artifact Registry
-      # - name: Docker Auth
-      #   id: docker-auth
-      #   uses: 'docker/login-action@v1'
-      #   with:
-      #     username: 'oauth2accesstoken'
-      #     password: '${{ steps.auth.outputs.access_token }}'
-      #     registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v1'
+        with:
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
+          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
 
       # - name: Docker Auth
       # id: docker-auth
