--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ on:
 env:
   GCP_PROJECT_ID: tasky-operation
   REPOSITORY: ${{ github.event.repository.name }}
-  GAR_LOCATION: gcr.io # TODO: update Artifact Registry location
+  GAR_LOCATION: us-east1 # TODO: update Artifact Registry location
 #   REPOSITORY: YOUR_REPOSITORY_NAME # TODO: update Artifact Registry repository name
 #   SERVICE: YOUR_SERVICE_NAME # TODO: update Cloud Run service name
   REGION: us-east1
@@ -81,13 +81,7 @@ jobs:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-      - name: Docker Auth
-        id: docker-auth
-        uses: 'docker/login-action@v1'
-        with:
-          username: 'oauth2accesstoken'
-          password: '${{ steps.auth.outputs.access_token }}'
-          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+  h
 
       # - name: Docker Auth
       # id: docker-auth
