--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,6 @@ env:
 jobs:
   deploy:
     environment: prod
-    # Add 'id-token' with the intended permissions for workload identity federation
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -81,14 +80,6 @@ jobs:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-      # - name: Docker Auth
-      # id: docker-auth
-      # uses: 'docker/login-action@v1'
-      # with:
-      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-      #   username: _json_key
-      #   password: ${{ secrets.GCP_CREDENTIALS }}
-
       - name: Docker Auth
       id: docker-auth
       uses: 'docker/login-action@v1'
@@ -96,13 +87,12 @@ jobs:
         username: 'oauth2accesstoken'
         password: '${{ steps.auth.outputs.access_token }}'
         registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
-        
+
       - name: Build and Push Container
-        run: |-
+      id: build-push-container
+        run: |
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.REPOSITORY }}:${{ github.sha }}" ./
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.REPOSITORY }}:${{ github.sha }}"
-
-      # END - Docker auth and build
 
       - name: Deploy to Cloud Run
         id: deploy
@@ -117,6 +107,5 @@ jobs:
           #  NODE_ENV=production
           #  TOKEN_EXPIRE=6400
 
-      # If required, use the Cloud Run url output in later steps
       - name: Show Output
         run: echo ${{ steps.deploy.outputs.url }}
