--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.10.0",
     "@google-cloud/secret-manager": "^5.6.0",
-    "@google-cloud/tasks": "^5.5.0",
+    "@google-cloud/tasks": "^5.5.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -36,6 +36,7 @@
     "firebase-admin": "^12.6.0",
     "mysql2": "^3.1.2",
     "node-fetch": "^2.7.0",
+    "node-schedule": "^2.1.1",
     "pdf-lib": "^1.17.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -48,6 +49,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "^18.19.61",
+    "@types/node-schedule": "^2.1.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
